--- a/public/emitir.html
+++ b/public/emitir.html
@@ -6,16 +6,22 @@
 	<script type="text/javascript" src = "https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src = "/socket.io/socket.io.js"></script>
 </head>	
-<body>
-	<video src = "" id = "video" autoplay style = "width: 800px; height: 600px; margin: 0 auto"></video>
+<body style = " margin: 0; padding: 0; width: 100%; height: 100%">
+	<video src = "" id = "video" autoplay style = "margin: 0 auto"></video>
 	<canvas id = "preview" style = "display: none"></canvas>
-	<div id = "logger"></div>
+	<!--
+	<div id = "logger"></div>-->
 	<script type="text/javascript">
+    	let maxWidth = $(window).width();
+    	let maxHeight = $(window).height();
+    	$('#video').attr('height', maxHeight);
+    	$('#video').attr('width', maxWidth);
+    	alert(maxWidth + " - " + maxHeight);
 		let canvas = document.getElementById('preview');
 		let context = canvas.getContext('2d');
 
-		canvas.height = 600;
-		canvas.width = 800;
+		canvas.height = 'auto';
+		canvas.width = '100%';
 
 		context.height = canvas.height;
 		context.width = canvas.width;
