--- a/public/emitir.html
+++ b/public/emitir.html
@@ -16,7 +16,7 @@
     	let maxHeight = $(window).height();
     	$('#video').attr('height', maxHeight);
     	$('#video').attr('width', maxWidth);
-    	alert(maxWidth + " - " + maxHeight);
+    	//alert(maxWidth + " - " + maxHeight);
 		let canvas = document.getElementById('preview');
 		let context = canvas.getContext('2d');
 
