--- a/public/emitir.html
+++ b/public/emitir.html
@@ -2,12 +2,15 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Camera Live</title>
 	<script type="text/javascript" src = "https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src = "/socket.io/socket.io.js"></script>
 </head>	
-<body>
-	<video src = "" id = "video" autoplay style = "width: 800px, height: 600px, margin: 0 auto"></video>
+<body style = "margin: 0; padding: 0">
+	<div style = "width: 100%; height: 100%; background: blue; position: fixed;">
+		<video src = "" id = "video" autoplay style = "width: 100%; height: 100%;"></video>
+	</div>
 	<canvas id = "preview" style = "display: none"></canvas>
 	<!--
 	<div id = "logger"></div>-->
