--- a/public/emitir.html
+++ b/public/emitir.html
@@ -8,9 +8,7 @@
 	<script type="text/javascript" src = "/socket.io/socket.io.js"></script>
 </head>	
 <body style = "margin: 0; padding: 0">
-	<div style = "width: 100%; height: 100%; background: blue; position: fixed;">
-		<video src = "" id = "video" autoplay style = "width: 100%; height: 100%;"></video>
-	</div>
+		<video src = "" id = "video" autoplay style = "width: 100%; height: 100%; position: fixed"></video>
 	<canvas id = "preview" style = "display: none"></canvas>
 	<!--
 	<div id = "logger"></div>-->
@@ -23,8 +21,8 @@
 		let canvas = document.getElementById('preview');
 		let context = canvas.getContext('2d');
 
-		canvas.height = 600;
-		canvas.width = 800;
+		canvas.height = '100%';
+		canvas.width = '100%';
 
 		context.height = canvas.height;
 		context.width = canvas.width;
